[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Teko-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/score.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 720
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Score" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = -0.15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSpacer" type="Control" parent="HBoxContainer"]
margin_right = 69.0
margin_bottom = 1032.0
size_flags_horizontal = 3

[node name="P1Digit1" type="Label" parent="HBoxContainer"]
margin_left = 69.0
margin_right = 354.0
margin_bottom = 1032.0
rect_min_size = Vector2( 285, 0 )
custom_colors/font_color = Color( 1, 0.678431, 0.54902, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Digit2" type="Label" parent="HBoxContainer"]
margin_left = 354.0
margin_right = 639.0
margin_bottom = 1032.0
rect_min_size = Vector2( 285, 0 )
custom_colors/font_color = Color( 1, 0.678431, 0.54902, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="ColorRect" parent="HBoxContainer"]
margin_left = 639.0
margin_right = 641.0
margin_bottom = 1032.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 0.678431, 0.54902, 1 )

[node name="P2Digit1" type="Label" parent="HBoxContainer"]
margin_left = 641.0
margin_right = 926.0
margin_bottom = 1032.0
rect_min_size = Vector2( 285, 0 )
custom_colors/font_color = Color( 1, 0.678431, 0.54902, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Digit2" type="Label" parent="HBoxContainer"]
margin_left = 926.0
margin_right = 1211.0
margin_bottom = 1032.0
rect_min_size = Vector2( 285, 0 )
custom_colors/font_color = Color( 1, 0.678431, 0.54902, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSpacer" type="Control" parent="HBoxContainer"]
margin_left = 1211.0
margin_right = 1280.0
margin_bottom = 1032.0
size_flags_horizontal = 3
